--- a/index.html
+++ b/index.html
@@ -383,16 +383,16 @@
 				<img src="./img/banner1.png" alt="">
 			</div>
 			<div class="swiper-slide">
-				<img src="./img/banner2.PNG" alt="">
+				<img src="./img/banner2.png" alt="">
 			</div>
 			<div class="swiper-slide">
-				<img src="./img/banner3.PNG" alt="">
+				<img src="./img/banner3.png" alt="">
 			</div>
 			<div class="swiper-slide">
-				<img src="./img/banner4.PNG" alt="">
+				<img src="./img/banner4.png" alt="">
 			</div>
 			<div class="swiper-slide">
-				<img src="./img/banner5.PNG" alt="">
+				<img src="./img/banner5.png" alt="">
 			</div>
 		</div>
 		<!-- 如果需要分页器 -->
